--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -62,11 +62,15 @@ adhocracy_group = ${grp:GROUP}
 [adhocracy]
 #Replace this with a randomly generated hash value:
 secret = DGK23234324234019357FFFFFFsecret
+#Adhocracy email from:
 email.from = mail@adhocracy.cc
+#Error emails:
 email_to = 
 error_email_from = paste@localhost
+#Database connection
 sqlalchemy.url = sqlite:///${buildout:directory}/var/development.db
 #sqlalchemy.url = postgres://nutzer:passwort@localhost/20101128 
+#Site name for all instances, part of the html <title>, notification E-Mails etc
 site.name = Adhocracy
 language = de_DE
 
