nicer email settings

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -60,13 +60,13 @@ adhocracy_user = ${env:USER}
 adhocracy_group = ${grp:GROUP}
 
 [adhocracy]
+protocol = http
 #Replace this with a randomly generated hash value:
 secret = DGK23234324234019357FFFFFFsecret
 #Adhocracy email from:
 email.from = mail@adhocracy.cc
 #Error emails:
-email_to = 
-error_email_from = paste@localhost
+email.to = 
 #Database connection
 sqlalchemy.url = sqlite:///${buildout:directory}/var/development.db
 #sqlalchemy.url = postgres://nutzer:passwort@localhost/20101128 
