add the adhocracy plugin to the plugins bin/paster uses automatically.
Now we don't need to type the parameter --plugin=adhocracy

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -144,6 +144,9 @@ eggs =
    PasteScript
    PasteDeploy
 entry-points = paster=paste.script.command:run 
+initialization =
+   import paste.script.command
+   paste.script.command.system_plugins.append('adhocracy') 
 
 # python with all required eggs
 [adhocpy]   
