--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -88,7 +88,7 @@ consumer_secret =
 [adhocracy_code]
 #repository = ssh://hg@bitbucket.org/liqd/adhocracy
 repository = https://bitbucket.org/liqd/adhocracy 
-branch = bundestag
+branch = default
 repository_theme = https://jokasis@bitbucket.org/liqd/adhocracy.enquete_theme
 
 [ports]
