--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -128,7 +128,7 @@ recipe = collective.recipe.grp
 recipe = plone.recipe.command
 stop-on-error = false
 command = 
-    [ -f src/adhocracy/setup.py ] && cd src/adhocracy && hg update -C ${adhocracy_code:branch}  
+    [ -f src/adhocracy/setup.py ] && cd src/adhocracy && hg pull && hg update -C ${adhocracy:branch}]
 
 [lxml]
 recipe = z3c.recipe.staticlxml
