Use adhocracy default branch.

--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -30,7 +30,7 @@ eggs +=
 
 [adhocracy_code]
 repository = ssh://hg@bitbucket.org/liqd/adhocracy
-branch = bundestag
+branch = default
 repository_theme = ssh://hg@bitbucket.org/liqd/adhocracy.enquete_theme
 
 [domains]
