add section for unthemed.ini; fix reference to adhocracy_code:branch

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -34,6 +34,7 @@ parts =
     adhocpy
     adhocracy_switch_branch
     adhocracy_conf
+    adhocracy_unthemed_conf
     adhocracy_setup
     omelette
     vhost_conf
@@ -128,7 +129,7 @@ recipe = collective.recipe.grp
 recipe = plone.recipe.command
 stop-on-error = false
 command = 
-    [ -f src/adhocracy/setup.py ] && cd src/adhocracy && hg pull && hg update -C ${adhocracy:branch}]
+    [ -f src/adhocracy/setup.py ] && cd src/adhocracy && hg pull && hg update -C ${adhocracy_code:branch}]
 
 [lxml]
 recipe = z3c.recipe.staticlxml
@@ -165,6 +166,14 @@ eggs = ${buildout:eggs}
 recipe = collective.recipe.template      
 input = ${buildout:directory}/etc/development.ini.in
 output = ${buildout:directory}/etc/development.ini
+rules = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme/rules.xml
+
+[adhocracy_unthemed_conf] 
+recipe = collective.recipe.template      
+input = ${buildout:directory}/etc/development.ini.in
+output = ${buildout:directory}/etc/unthemed.ini
+rules = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme/notheme.xml
+
 
 #set up adhocracy (TODO: this should be an entry point)
 [adhocracy_setup] 
