--- a/etc/development.ini.in
+++ b/etc/development.ini.in
@@ -47,7 +47,7 @@ pipeline = theme
 [filter:theme]
 use = egg:diazo
 read_network = True
-rules = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme/rules.xml 
+rules = ${rules} 
 prefix = /static_theme
 debug = true
 wordpress_backend = ${domains:blog} 
