--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -17,6 +17,7 @@ eggs =
     PILwoTK == 1.1.6.4              
     adhocracy 
     adhocracy.enquete_theme
+    BeautifulSoup
 
 # checkout adhocracy to ./src
 auto-checkout = 
