added nose test script

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -151,12 +151,15 @@ initialization =
    import paste.script.command
    paste.script.command.system_plugins.append('adhocracy') 
 
-# python with all required eggs
+# python with all required eggs and the nose test script
 [adhocpy]   
 recipe = zc.recipe.egg
-eggs = ${buildout:eggs}
+eggs = 
+    ${buildout:eggs}
+    nose
 interpreter = adhocpy
 scripts = adhocpy
+          nosetests=nosetest
 
 # unified directory structure of installed eggs
 [omelette]
