added nose coverage

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -157,6 +157,7 @@ recipe = zc.recipe.egg
 eggs = 
     ${buildout:eggs}
     nose
+    nose-cov
 interpreter = adhocpy
 scripts = adhocpy
           nosetests=nosetest
