--- a/versions.cfg
+++ b/versions.cfg
@@ -57,8 +57,13 @@ WebTest = 1.2.3
 amqplib = 0.6.1
 collective.recipe.solrinstance = 1.1
 markdown2 = 1.0.1.17
-nose = 1.1.1
 oauth = 1.0.1
+
+#nose
+nose = 1.1.1
+nose-cov = 1.4
+cov-core = 1.3
+coverage = 3.5
 
 #Required by:
 #WebError 0.10.3
