--- a/versions.cfg
+++ b/versions.cfg
@@ -59,6 +59,10 @@ collective.recipe.solrinstance = 1.1
 markdown2 = 1.0.1.17
 oauth = 1.0.1
 
+#ipdb
+ipdb = 0.5
+ipython = 0.11
+
 #nose
 nose = 1.1.1
 nose-cov = 1.4
