moved nose script to development buildout

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -151,16 +151,16 @@ initialization =
    import paste.script.command
    paste.script.command.system_plugins.append('adhocracy') 
 
-# python with all required eggs and the nose test script
+# python with all required eggs 
 [adhocpy]   
 recipe = zc.recipe.egg
 eggs = 
     ${buildout:eggs}
     nose
     nose-cov
+    nose-exclude
 interpreter = adhocpy
 scripts = adhocpy
-          nosetests=nosetest
 
 # unified directory structure of installed eggs
 [omelette]
