--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -11,6 +11,7 @@ parts +=
     libevent
     memcached
     memcached_setup
+    test
     supervisor
 
 ##############################################################################  
@@ -23,6 +24,18 @@ eggs +=
     ipdb
     Werkzeug
     WebError
+
+##############################################################################  
+#Generate nose test script
+##############################################################################  
+
+[test]   
+recipe = zc.recipe.egg
+eggs = 
+    ${buildout:eggs}
+    nose
+    nose-cov
+scripts = nosetests=nosetest 
 
 ##############################################################################  
 #Override settings from buildout_common.cfg    
