Add recipes for bin/test (nosetest) and bin/createcoverage. Add .coveragerc

--- a/.hgignore
+++ b/.hgignore
@@ -3,14 +3,16 @@ parts
 bin
 lib
 eggs
+htmlcov
 include
 downloads
 installed_eggs
 .*\.egg-info$
 .*\.pyo$
 .*\.pyc$
-.mr.developer.cfg
-.installed.cfg
+\.coverage
+\.mr.developer.cfg
+\.installed.cfg
 etc/development.ini
 etc/rabbitmq-env.conf
 etc/vhost_adhocracy_bundestag.conf
