--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -12,6 +12,8 @@ parts +=
     memcached
     memcached_setup
     supervisor
+    test
+    coveragereport
 
 ##############################################################################  
 # Aditional stuff to make development easy
@@ -52,4 +54,15 @@ programs =
     40 adhocracy_background ${buildout:directory}/bin/paster [--plugin=adhocracy background -c ${buildout:directory}/etc/development.ini]
 #    45 adhocracy ${buildout:directory}/bin/paster [serve ${buildout:directory}/etc/development.ini]
  
-    
+[test]
+recipe = pbp.recipe.noserunner
+eggs = ${buildout:eggs}
+# -s: Don't capture stdout (any stdout output will be
+#     printed immediately). Necessary to use pdb during test
+# -q: be less verbose
+defaults = 
+   -s -q --with-pylons=${buildout:directory}/src/adhocracy/test.ini ${buildout:directory}/src/adhocracy
+
+[coveragereport]
+recipe = zc.recipe.egg
+eggs = createcoverage    
