--- a/versions.cfg
+++ b/versions.cfg
@@ -55,6 +55,7 @@ WebHelpers = 1.3
 WebOb = 1.0.7
 WebTest = 1.2.3
 amqplib = 0.6.1
+collective.recipe.solrinstance = 1.1
 markdown2 = 1.0.1.17
 nose = 1.1.2
 oauth = 1.0.1
