--- a/versions.cfg
+++ b/versions.cfg
@@ -58,6 +58,7 @@ amqplib = 0.6.1
 collective.recipe.solrinstance = 1.1
 markdown2 = 1.0.1.17
 oauth = 1.0.1
+recaptcha-client = 1.0.6
 
 #ipdb
 ipdb = 0.5
