move the port used for url generation to it's own buildout variable

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -47,6 +47,7 @@ parts =
 
 [domains]
 main = adhocracy.lan
+main.force_port =
 #The adhocracy diazo theme can merge content from this backend wordpress blog.
 #The linked html page has to deliver proper xhtml content (<?xml encoding="utf-8"> ..)!!!
 blog = 
