--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -36,10 +36,11 @@ branch = default
 repository_theme = ssh://hg@bitbucket.org/liqd/adhocracy.enquete_theme
 
 [domains]
+main = adhocracy.lan
 # generate internal urls with port 5001 to be able to work without a
 # proxy (e.g. apache with ReverseProxy, see /etc/vhost.ini.in)
-# on port 5001.
-main = adhocracy.lan:5001
+# on a port != 80
+main.force_port = :${ports:main}
 blog = staging_bundestag_blog.adhocracy.cc
 
 ##############################################################################  
