--- a/versions.cfg
+++ b/versions.cfg
@@ -56,7 +56,6 @@ WebTest = 1.2.3
 amqplib = 0.6.1
 collective.recipe.solrinstance = 1.1
 markdown2 = 1.0.1.17
-nose = 1.1.2
 oauth = 1.0.1
 recaptcha-client = 1.0.6
 
@@ -66,9 +65,9 @@ ipython = 0.11
 
 #nose
 nose = 1.1.2
-nose-cov = 1.4
-cov-core = 1.3
 coverage = 3.5
+createcoverage = 1.1
+pbp.recipe.noserunner = 0.2.6
 
 #Required by:
 #WebError 0.10.3
