add ipdb egg to development.ini

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -18,6 +18,7 @@ eggs =
     adhocracy 
     adhocracy.enquete_theme
     BeautifulSoup
+    ipdb
 
 # checkout adhocracy to ./src
 auto-checkout = 
