fix syntax error

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -133,7 +133,7 @@ recipe = collective.recipe.grp
 recipe = plone.recipe.command
 stop-on-error = false
 command = 
-    [ -f src/adhocracy/setup.py ] && cd src/adhocracy && hg pull && hg update -C ${adhocracy_code:branch}]
+    [ -f src/adhocracy/setup.py ] && cd src/adhocracy && hg pull && hg update -C ${adhocracy_code:branch}
 
 [lxml]
 recipe = z3c.recipe.staticlxml
