--- a/versions.cfg
+++ b/versions.cfg
@@ -59,15 +59,25 @@ markdown2 = 1.0.1.17
 oauth = 1.0.1
 recaptcha-client = 1.0.6
 
-#ipdb
-ipdb = 0.5
-ipython = 0.11
+#buildout
+collective.recipe.grp = 1.0
+gocept.recipe.env = 1.0
+
+#fantastic ressource management
+fanstatic = 0.11.2
+js.jquery = 1.6.1
+js.jquery-qtip = 1.0.0
+
 
 #nose
 nose = 1.1.2
 coverage = 3.5
 createcoverage = 1.1
 pbp.recipe.noserunner = 0.2.6
+nose-cov = 1.4
+nose-exclude = 0.1.5
+cov-core = 1.3
+ 
 
 #Required by:
 #WebError 0.10.3
@@ -133,3 +143,10 @@ Babel = 0.9.6
 BeautifulSoup = 3.2.0
 meld3 = 0.6.7
 supervisor = 3.0a10
+WSGIRewrite = 0.1.3.1
+Werkzeug = 0.7.1
+ipdb = 0.5
+ipython = 0.11
+ 
+
+
