--- a/etc/development.ini.in
+++ b/etc/development.ini.in
@@ -6,14 +6,14 @@
 [DEFAULT]
 debug = true
 # Uncomment and replace with the address which should receive any error reports
-email_to = ${adhocracy:email.to}
+email_to = ${parts.adhocracy['email.to']}
 smtp_server = localhost
-error_email_from = ${adhocracy:email.from} 
+error_email_from = ${parts.adhocracy['email.from']} 
 
 [server:main]
 use = egg:Paste#http
 host = 127.0.0.1
-port = ${ports:main}
+port = ${parts.ports.main}
 
 [composite:main]
 use = egg:Paste#urlmap
@@ -26,7 +26,7 @@ use = egg:Paste#urlmap
 # Serve the theme from disk from /static (as set up in [composite:main])
 [app:static]
 use = egg:Paste#static
-document_root = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme
+document_root = ${parts.buildout.directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme
 
 # Serve the Diazo-transformed content everywhere else
 [pipeline:default]
@@ -47,11 +47,11 @@ pipeline = theme
 [filter:theme]
 use = egg:diazo
 read_network = True
-rules = ${rules} 
+rules = ${parts.adhocracy_conf.rules} 
 prefix = /static_theme
 debug = true
-wordpress_backend = ${domains:blog} 
-wordpress_backend_startseite = ${domains:blog}/startseite/
+wordpress_backend = ${parts.domains.blog} 
+wordpress_backend_startseite = ${parts.domains.blog}/startseite/
 
 ###################diazo theme wordpress ###################
 
@@ -62,7 +62,7 @@ pipeline = theme
 # Proxy wordpress 
 [app:_wordpress]
 use = egg:Paste#proxy
-address = http://${domains:blog} 
+address = http://${parts.domains.blog} 
 suppress_http_headers = accept-encoding
 
 ###################Adhocracy conf ###################
@@ -74,29 +74,29 @@ use = egg:adhocracy
 full_stack = true
 static_files = true
 
-cache_dir = ${buildout:directory}/var/data
+cache_dir = ${parts.buildout.directory}/var/data
 beaker.session.key = adhocracy_state
 # INSTALL: Replace this with a randomly generated hash value:
-beaker.session.secret = ${adhocracy:secret}
+beaker.session.secret = ${parts.adhocracy.secret}
 
 # INSTALL: Insert your domain name here. Make sure to include the 
 # dot at the beginning of each domain to create wildcard cookies. 
 # Also make sure this is identical to the adhocracy.domains setting
 # below. 
-beaker.session.cookie_domain = .${domains:main} 
-session.domain =  .${domains:main} 
+beaker.session.cookie_domain = .${parts.domains.main} 
+session.domain =  .${parts.domains.main} 
 
 # If you'd like to fine-tune the individual locations of the cache data dirs
 # for the Cache data, or the Session saves, un-comment the desired settings
 # here:
-beaker.cache.data_dir = ${buildout:directory}/var/data/cache
-beaker.session.data_dir = ${buildout:directory}/var/data/sessions
+beaker.cache.data_dir = ${parts.buildout.directory}/var/data/cache
+beaker.session.data_dir = ${parts.buildout.directory}/var/data/sessions
 
 # INSTALL: Locate your Memcached server if installed. Otherwise comment this out.  
-memcached.server = 127.0.0.1:${ports:memcached}
+memcached.server = 127.0.0.1:${parts.ports.memcached}
 
 # INSTALL: SQLAlchemy database URL
-sqlalchemy.url = ${adhocracy:sqlalchemy.url}
+sqlalchemy.url = ${parts.adhocracy['sqlalchemy.url']}
 
 # INSTALL: Uncommenting this line will delete all locally saved data and drop 
 # the entire database. Please only use this if you have a backup ready. 
@@ -104,7 +104,7 @@ sqlalchemy.url = ${adhocracy:sqlalchemy.url}
 ## adhocracy.setup.drop = KILL_EM_ALL
 #
 
-adhocracy.solr.url = http://${domains:main}:${ports:solr}/solr
+adhocracy.solr.url = http://${parts.domains.main}:${parts.ports.solr}/solr
 
 # WARNING: *THE LINE BELOW MUST BE UNCOMMENTED ON A PRODUCTION ENVIRONMENT*
 # Debug mode will enable the interactive debugging tool, allowing ANYONE to
@@ -113,21 +113,21 @@ adhocracy.solr.url = http://${domains:main}:${ports:solr}/solr
 
 # INSTALL: Set up the Adhocracy domain name. This will be used to determine the
 # active instance, e.g. "Test Instance" for test.adhocracy.lan. 
-adhocracy.domain = ${domains:main}${domains:main.force_port}
-adhocracy.protocol = ${adhocracy:protocol}
+adhocracy.domain = ${parts.domains.main}${parts.domains['main.force_port']}
+adhocracy.protocol = ${parts.adhocracy.protocol}
 
 # INSTALL: Set a site name for all instances. This will be used as a part of 
 # the html <title>, notification E-Mails etc. 
-adhocracy.site.name = ${adhocracy:site.name}
-adhocracy.language = ${adhocracy:language}
+adhocracy.site.name = ${parts.adhocracy['site.name']}
+adhocracy.language = ${parts.adhocracy.language}
 
 # INSTALL: The site directory contains your site modifications of Adhocracy 
 # (e.g. logos, CSS, html pages). A skeleton site directory will be created 
 # by the "setup-app" paster command. 
-adhocracy.site.dir = ${buildout:directory}/var/site
+adhocracy.site.dir = ${parts.buildout.directory}/var/site
 
 # INSTALL: A nice E-Mail address. 
-adhocracy.email.from = ${adhocracy:email.from}
+adhocracy.email.from = ${parts.adhocracy['email.from']}
 
 # Show fallback icons in instance overview if no instance icon is defined
 adhocracy.show_instance_fallback_icons = True
@@ -135,11 +135,11 @@ adhocracy.show_instance_fallback_icons = True
 # INSTALL: Twitter. Since there is currently no option to take it out of the UI, 
 # you will want to use Twitter. Create an OAuth application to allow users to 
 # link their profiles: https://twitter.com/oauth_clients
-adhocracy.twitter.username = ${twitter:username}
-adhocracy.twitter.key = ${twitter:key} 
-adhocracy.twitter.secret = ${twitter:secret} 
-adhocracy.twitter.consumer_key = ${twitter:consumer_key} 
-adhocracy.twitter.consumer_secret = ${twitter:consumer_key} 
+adhocracy.twitter.username = ${parts.twitter.username}
+adhocracy.twitter.key = ${parts.twitter.key} 
+adhocracy.twitter.secret = ${parts.twitter.secret} 
+adhocracy.twitter.consumer_key = ${parts.twitter.consumer_key} 
+adhocracy.twitter.consumer_secret = ${parts.twitter.consumer_key} 
 
 # INSTALL: bit.ly is used as a URL shortener. Since their API requires auth, you 
 # can either leave the defaults here and give certain usage statistics to the 
@@ -152,7 +152,7 @@ adhocracy.twitter.consumer_secret = ${twitter:consumer_key}
 # unable to process messages related to another database. 
 adhocracy.amqp.host = 127.0.0.1
 #rabbitq default port is 5672
-adhocracy.amqp.port = ${ports:rabbitmq} 
+adhocracy.amqp.port = ${parts.ports.rabbitmq} 
 #adhocracy.amqp.event_queue = adhocracy.queue
 adhocracy.amqp.event_exchange = adhocracy.exchange
 
