added development unthemed ini file

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -36,7 +36,6 @@ parts =
     adhocpy
     adhocracy_switch_branch
     adhocracy_conf
-    adhocracy_unthemed_conf
     adhocracy_setup
     omelette
     vhost_conf
@@ -171,17 +170,10 @@ eggs = ${buildout:eggs}
 
 # generate the adhocracy config file
 [adhocracy_conf] 
-recipe = collective.recipe.template      
+recipe = collective.recipe.template[genshi]:genshi
 input = ${buildout:directory}/etc/development.ini.in
 output = ${buildout:directory}/etc/development.ini
 rules = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme/rules.xml
-
-[adhocracy_unthemed_conf] 
-recipe = collective.recipe.template      
-input = ${buildout:directory}/etc/development.ini.in
-output = ${buildout:directory}/etc/unthemed.ini
-rules = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme/notheme.xml
-
 
 #set up adhocracy (TODO: this should be an entry point)
 [adhocracy_setup] 
