--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -4,6 +4,7 @@
 
 extends = buildout_common.cfg
 parts += 
+    adhocracy_unthemed_conf
     solr_download
     solr
     rabbitmq 
@@ -55,6 +56,20 @@ main = adhocracy.lan
 # on a port != 80
 main.force_port = :${ports:main}
 blog = staging_bundestag_blog.adhocracy.cc
+
+##############################################################################  
+#Additional server conifg without diazo themeing   
+##############################################################################  
+
+[ports]
+main_unthemed = 5002
+[domains]
+main_unthemed.force_port = :${ports:main_unthemed} 
+ 
+[adhocracy_unthemed_conf] 
+recipe = collective.recipe.template[genshi]:genshi
+input = ${buildout:directory}/etc/development_unthemed.ini.in
+output = ${buildout:directory}/etc/development_unthemed.ini
 
 ##############################################################################  
 # Set up supervisor to run it all
