Only one config file: adhocracy.ini; production.ini/staging.ini only need to override single options; adhocracy_unthemed.ini to easy theming development,

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -63,6 +63,8 @@ adhocracy_user = ${env:USER}
 adhocracy_group = ${grp:GROUP}
 
 [adhocracy]
+#start adhocracy in debug mode
+debug = False
 protocol = http
 #Replace this with a randomly generated hash value:
 secret = DGK23234324234019357FFFFFFsecret
@@ -171,8 +173,8 @@ eggs = ${buildout:eggs}
 # generate the adhocracy config file
 [adhocracy_conf] 
 recipe = collective.recipe.template[genshi]:genshi
-input = ${buildout:directory}/etc/development.ini.in
-output = ${buildout:directory}/etc/development.ini
+input = ${buildout:directory}/etc/adhocracy.ini.in
+output = ${buildout:directory}/etc/adhocracy.ini
 rules = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme/rules.xml
 
 #set up adhocracy (TODO: this should be an entry point)
@@ -180,7 +182,7 @@ rules = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_them
 recipe = plone.recipe.command
 command = 
     chmod -R g+rw var/data
-    bin/paster setup-app ${buildout:directory}/etc/development.ini --name=content 
+    bin/paster setup-app ${buildout:directory}/etc/adhocracy.ini --name=content 
     ln -s parts/omelette installed_eggs
 
 ##############################################################################  
@@ -272,8 +274,8 @@ programs =
     0 rabbitmq ${buildout:directory}/bin/rabbitmq-server                 
     20 memcached ${memcached:location}/bin/memcached [-l 127.0.0.1 -p ${ports:memcached} -U ${ports:memcached}] 
     30 solr ${buildout:directory}/bin/solr-instance [fg]
-    40 adhocracy_background ${buildout:directory}/bin/paster [--plugin=adhocracy background -c ${buildout:directory}/etc/development.ini]
-    45 adhocracy ${buildout:directory}/bin/paster [serve ${buildout:directory}/etc/development.ini]
+    40 adhocracy_background ${buildout:directory}/bin/paster [--plugin=adhocracy background -c ${buildout:directory}/etc/adhocracy.ini]
+    45 adhocracy ${buildout:directory}/bin/paster [serve ${buildout:directory}/etc/adhocracy.ini]
  
  
  
