--- a/etc/adhocracy_unthemed.ini.in
+++ b/etc/adhocracy_unthemed.ini.in
@@ -1,6 +1,8 @@
-{% include etc/development.ini.in %}
+{% include etc/adhocracy.ini.in %}
 
+###########################################################
 #OVERRIDES to disable theming
+############################################################
 
 [app:content]
 adhocracy.domain = ${parts.domains.main}${parts.domains['main_unthemed.force_port']}
