--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -68,8 +68,8 @@ main_unthemed.force_port = :${ports:main_unthemed}
  
 [adhocracy_unthemed_conf] 
 recipe = collective.recipe.template[genshi]:genshi
-input = ${buildout:directory}/etc/development_unthemed.ini.in
-output = ${buildout:directory}/etc/development_unthemed.ini
+input = ${buildout:directory}/etc/adhocracy_unthemed.ini.in
+output = ${buildout:directory}/etc/adhocracy_unthemed.ini
 
 ##############################################################################  
 # Set up supervisor to run it all
@@ -80,8 +80,8 @@ programs =
     0 rabbitmq ${buildout:directory}/bin/rabbitmq-server                 
     20 memcached ${memcached:location}/bin/memcached [-l 127.0.0.1 -p ${ports:memcached} -U ${ports:memcached}] 
     30 solr ${buildout:directory}/bin/solr-instance [fg]
-    40 adhocracy_background ${buildout:directory}/bin/paster [--plugin=adhocracy background -c ${buildout:directory}/etc/development.ini]
-#    45 adhocracy ${buildout:directory}/bin/paster [serve ${buildout:directory}/etc/development.ini]
+    40 adhocracy_background ${buildout:directory}/bin/paster [--plugin=adhocracy background -c ${buildout:directory}/etc/adhocracy.ini]
+#    45 adhocracy ${buildout:directory}/bin/paster [serve ${buildout:directory}/etc/adhocracy.ini]
  
 [test]
 recipe = pbp.recipe.noserunner
