--- a/versions.cfg
+++ b/versions.cfg
@@ -62,6 +62,8 @@ recaptcha-client = 1.0.6
 #buildout
 collective.recipe.grp = 1.0
 gocept.recipe.env = 1.0
+Genshi = 0.6
+
 
 #fantastic ressource management
 fanstatic = 0.11.2
