removed the adhocracy_switch_branch part to auto update the code, instead use mr.developer for initial checkout and branch chaning

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -34,7 +34,6 @@ parts =
     lxml
     paster
     adhocpy
-    adhocracy_switch_branch
     adhocracy_conf
     adhocracy_setup
     omelette
@@ -93,7 +92,7 @@ consumer_secret =
 [adhocracy_code]
 #repository = ssh://hg@bitbucket.org/liqd/adhocracy
 repository = https://bitbucket.org/liqd/adhocracy 
-branch = default
+repository_branch = default
 repository_theme = https://jokasis@bitbucket.org/liqd/adhocracy.enquete_theme
 
 [ports]
@@ -113,7 +112,7 @@ libevent = http://www.monkey.org/~provos/libevent-1.4.8-stable.tar.gz
 memcached = http://memcached.googlecode.com/files/memcached-1.4.7.tar.gz
 
 [sources]
-adhocracy = hg ${adhocracy_code:repository}
+adhocracy = hg ${adhocracy_code:repository} [branch=${adhocracy_code:repository_branch}]
 adhocracy.enquete_theme = hg ${adhocracy_code:repository_theme}
 
 
@@ -129,12 +128,11 @@ recipe = gocept.recipe.env
 [grp]
 recipe = collective.recipe.grp
 
-# clone hg repositories we want to work with
-[adhocracy_switch_branch]
-recipe = plone.recipe.command
-stop-on-error = false
-command = 
-    [ -f src/adhocracy/setup.py ] && cd src/adhocracy && hg pull && hg update -C ${adhocracy_code:branch}
+#[adhocracy_switch_branch]
+#recipe = plone.recipe.command
+#stop-on-error = false
+#command = 
+    #[ -f src/adhocracy/setup.py ] && cd src/adhocracy && hg pull && hg update -C ${adhocracy_code:repository_branch}
 
 [lxml]
 recipe = z3c.recipe.staticlxml
