--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -17,6 +17,9 @@ parts +=
     test
     coveragereport
 
+#update repositories when updating the buildout
+always-checkout = true
+
 ##############################################################################  
 # Aditional stuff to make development easy
 ##############################################################################
