reenabled adhocracy_switch_branch

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -15,6 +15,7 @@ eggs =
     WSGIRewrite
     diazo [wsgi]
     PILwoTK == 1.1.6.4              
+    adhocracy_switch_branch
     adhocracy 
     adhocracy.enquete_theme
     BeautifulSoup
@@ -92,7 +93,7 @@ consumer_secret =
 [adhocracy_code]
 #repository = ssh://hg@bitbucket.org/liqd/adhocracy
 repository = https://bitbucket.org/liqd/adhocracy 
-repository_branch = default
+branch =  default
 repository_theme = https://jokasis@bitbucket.org/liqd/adhocracy.enquete_theme
 
 [ports]
@@ -112,7 +113,7 @@ libevent = http://www.monkey.org/~provos/libevent-1.4.8-stable.tar.gz
 memcached = http://memcached.googlecode.com/files/memcached-1.4.7.tar.gz
 
 [sources]
-adhocracy = hg ${adhocracy_code:repository} [branch=${adhocracy_code:repository_branch}]
+adhocracy = hg ${adhocracy_code:repository} [branch=${adhocracy_code:branch}]
 adhocracy.enquete_theme = hg ${adhocracy_code:repository_theme}
 
 
@@ -128,11 +129,11 @@ recipe = gocept.recipe.env
 [grp]
 recipe = collective.recipe.grp
 
-#[adhocracy_switch_branch]
-#recipe = plone.recipe.command
-#stop-on-error = false
-#command = 
-    #[ -f src/adhocracy/setup.py ] && cd src/adhocracy && hg pull && hg update -C ${adhocracy_code:repository_branch}
+[adhocracy_switch_branch]
+recipe = plone.recipe.command
+stop-on-error = false
+command = 
+    [ -f src/adhocracy/setup.py ] && cd src/adhocracy && hg pull && hg update -C ${adhocracy_code:branch}
 
 [lxml]
 recipe = z3c.recipe.staticlxml
