--- a/versions.cfg
+++ b/versions.cfg
@@ -24,7 +24,7 @@ decorator = 3.3.1
 eventlet = 0.9.16
 greenlet = 0.3.1
 hexagonit.recipe.download = 1.5.0
-mr.developer = 1.17
+mr.developer = 1.19
 ore.recipe.fs = 0.3.1
 plone.recipe.command = 1.1
 pysqlite = 2.6.3
@@ -63,13 +63,14 @@ recaptcha-client = 1.0.6
 collective.recipe.grp = 1.0
 gocept.recipe.env = 1.0
 Genshi = 0.6
-
+argparse = 1.2.1
+elementtree = 1.2.6-20050316
+zc.buildout = 1.5.2
 
 #fantastic ressource management
 fanstatic = 0.11.2
 js.jquery = 1.6.1
 js.jquery-qtip = 1.0.0
-
 
 #nose
 nose = 1.1.2
@@ -100,10 +101,6 @@ zope.interface = 3.6.3
 Cheetah = 2.2.1
 
 #Required by:
-#mr.developer 1.17
-argparse = 1.2.1
-
-#Required by:
 #oauth2 1.5.170
 httplib2 = 0.7.1
 
@@ -117,12 +114,7 @@ oauth2 = 1.5.170
 
 #Required by:
 #zc.buildout 1.5.2
-#mr.developer 1.17
 setuptools = 0.6c12dev-r88846
-
-#Required by:
-#mr.developer 1.17
-zc.buildout = 1.5.2
 
 #Required by:
 #z3c.recipe.staticlxml 0.7.2
