added ZopeSkell paster templates

--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -60,6 +60,9 @@ main = adhocracy.lan
 main.force_port = :${ports:main}
 blog = staging_bundestag_blog.adhocracy.cc
 
+[paster]
+eggs += ZopeSkel
+ 
 ##############################################################################  
 #Additional server conifg without diazo themeing   
 ##############################################################################  
