fix: debug *ini file is not working; added adhocracy.wordbressbasic_theme; cleanup

--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -18,7 +18,7 @@ parts +=
     coveragereport
 
 #update repositories when updating the buildout
-always-checkout = true
+always-checkout = false
 
 ##############################################################################  
 # Aditional stuff to make development easy
@@ -47,10 +47,19 @@ scripts = nosetests=nosetest
 #Override settings from buildout_common.cfg    
 ##############################################################################  
 
+[adhocracy]
+debug = True
+
 [adhocracy_code]
 repository = ssh://hg@bitbucket.org/liqd/adhocracy
 branch = default
-repository_theme = ssh://hg@bitbucket.org/liqd/adhocracy.enquete_theme
+diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme
+diazo_wordpress_rules_dir = ${buildout:directory}/src/adhocracy.wordpressbasic_theme/adhocracy/wordpressbasic_theme
+
+[sources]
+adhocracy = hg ${adhocracy_code:repository} [branch=${adhocracy_code:branch}]
+adhocracy.enquete_theme = hg ssh://hg@bitbucket.org/liqd/adhocracy.enquete_theme
+adhocracy.wordpressbasic_theme = hg ssh://hg@bitbucket.org/liqd/adhocracy.wordpressbasic_theme
 
 [domains]
 main = adhocracy.lan
