--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -17,15 +17,12 @@ eggs =
     PILwoTK == 1.1.6.4              
     adhocracy 
     adhocracy.enquete_theme
+    adhocracy.wordpressbasic_theme
     BeautifulSoup
     ipdb
 
-# checkout adhocracy to ./src
-auto-checkout = 
-    adhocracy 
-    adhocracy.enquete_theme
-develop = 
-    src/*
+# checkout adhocracy packages to ./src
+auto-checkout = *
 
 # parts in this buildout file to be installed    
 parts =
@@ -94,7 +91,13 @@ consumer_secret =
 #repository = ssh://hg@bitbucket.org/liqd/adhocracy
 repository = https://bitbucket.org/liqd/adhocracy 
 branch =  default
-repository_theme = https://jokasis@bitbucket.org/liqd/adhocracy.enquete_theme
+diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme
+diazo_wordpress_rules_dir = ${buildout:directory}/src/adhocracy.wordpressbasic_theme/adhocracy/wordpressbasic_theme
+
+[sources]
+adhocracy = hg ${adhocracy_code:repository} [branch=${adhocracy_code:branch}]
+adhocracy.enquete_theme = hg https://jokasis@bitbucket.org/liqd/adhocracy.enquete_theme 
+adhocracy.wordpressbasic_theme = hg https://bitbucket.org/liqd/adhocracy.wordpressbasic_theme
 
 [ports]
 main = 5001
@@ -111,11 +114,6 @@ solr = http://apache.lauf-forum.at//lucene/solr/1.4.1/apache-solr-1.4.1.tgz
 #solr = http://www.bitlib.net/mirror/apache.org//lucene/solr/3.2.0/apache-solr-3.2.0.zip 
 libevent = http://www.monkey.org/~provos/libevent-1.4.8-stable.tar.gz
 memcached = http://memcached.googlecode.com/files/memcached-1.4.7.tar.gz
-
-[sources]
-adhocracy = hg ${adhocracy_code:repository} [branch=${adhocracy_code:branch}]
-adhocracy.enquete_theme = hg ${adhocracy_code:repository_theme}
-
 
 ##############################################################################  
 # Setup adhocracy and python dependencies
@@ -174,7 +172,6 @@ eggs = ${buildout:eggs}
 recipe = collective.recipe.template[genshi]:genshi
 input = ${buildout:directory}/etc/adhocracy.ini.in
 output = ${buildout:directory}/etc/adhocracy.ini
-rules = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme/rules.xml
 
 #set up adhocracy (TODO: this should be an entry point)
 [adhocracy_setup] 
