fix: paster misses fantastic dependency

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -19,6 +19,7 @@ eggs =
     adhocracy.enquete_theme
     adhocracy.wordpressbasic_theme
     BeautifulSoup
+    fanstatic
     ipdb
 
 # checkout adhocracy packages to ./src
