--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -52,8 +52,9 @@ debug = True
 
 [adhocracy_code]
 repository = ssh://hg@bitbucket.org/liqd/adhocracy
-branch = default
-diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme
+branch = sprint-new-templates
+#diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme
+diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.wordpressbasic_theme/adhocracy/wordpressbasic_theme
 diazo_wordpress_rules_dir = ${buildout:directory}/src/adhocracy.wordpressbasic_theme/adhocracy/wordpressbasic_theme
 
 [sources]
