Fix unthemed.ini.in, make .force_port a bool, use adhocracy.host
* Use domains.main_unthemed and ports.main_unthemed in the unthemed ini file.
* Make domain.main[_unthemed].force_port a boolean and use the corresponding
  value in [ports] for adhocracy.domain.
* use adhocracy.host for the [server:main] section

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -51,7 +51,7 @@ main.force_port =
 blog = 
 solr = localhost
 rabbitmq = localhost
- 
+
 [paths]
 apache_conf = /etc/apache2
 apache_log = /var/log/apache2
@@ -64,6 +64,7 @@ adhocracy_group = ${grp:GROUP}
 #start adhocracy in debug mode
 debug = False
 protocol = http
+host = 127.0.0.1
 #Replace this with a randomly generated hash value:
 secret = DGK23234324234019357FFFFFFsecret
 #Adhocracy email from:
@@ -194,7 +195,7 @@ url = ${urls:solr}
 [solr]
 recipe = collective.recipe.solrinstance
 solr-location = ${solr_download:location}
-host = 127.0.0.1
+host = ${domains:solr}
 port = ${ports:solr}
 max-num-results = 500
 #we use a static config file, there is nothing auto generated...
