--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -66,7 +66,7 @@ main = adhocracy.lan
 # generate internal urls with port 5001 to be able to work without a
 # proxy (e.g. apache with ReverseProxy, see /etc/vhost.ini.in)
 # on a port != 80
-main.force_port = :${ports:main}
+main.force_port = True
 blog = staging_bundestag_blog.adhocracy.cc
 
 [paster]
@@ -78,8 +78,9 @@ eggs += ZopeSkel
 
 [ports]
 main_unthemed = 5002
+
 [domains]
-main_unthemed.force_port = :${ports:main_unthemed} 
+main_unthemed.force_port = True
  
 [adhocracy_unthemed_conf] 
 recipe = collective.recipe.template[genshi]:genshi
