--- a/etc/adhocracy_unthemed.ini.in
+++ b/etc/adhocracy_unthemed.ini.in
@@ -4,8 +4,15 @@
 #OVERRIDES to disable theming
 ############################################################
 
+{% python
+adhocracy_domain = parts['domains']['main_unthemed']
+if parts['domains'].get('main_unthemed.force_port', None):
+   adhocracy_domain += ':%s' % parts['ports']['main_unthemed']
+%}
+adhocracy.domain = ${adhocracy_domain}
+
 [app:content]
-adhocracy.domain = ${parts.domains.main}${parts.domains['main_unthemed.force_port']}
+adhocracy.domain = ${parts.domains.main_unthemed}:${parts.ports.main_unthemed}
 
 [server:main]
 port = ${parts.ports.main_unthemed}
