rename adhocracy_unthemed.ini to unthemed.ini and fix vars
* Rename the ini files
* remove domains.unthemed_main which now seems like an unecessary
  duplication

--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -84,8 +84,8 @@ main_unthemed.force_port = True
  
 [adhocracy_unthemed_conf] 
 recipe = collective.recipe.template[genshi]:genshi
-input = ${buildout:directory}/etc/adhocracy_unthemed.ini.in
-output = ${buildout:directory}/etc/adhocracy_unthemed.ini
+input = ${buildout:directory}/etc/unthemed.ini.in
+output = ${buildout:directory}/etc/unthemed.ini
 
 ##############################################################################  
 # Set up supervisor to run it all
