--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -31,7 +31,7 @@ parts =
     grp
     lxml
     paster
-    adhocracy_switch_branch
+    adhocracy_switch_revision_number
     adhocpy
     adhocracy_conf
     adhocracy_setup
@@ -90,14 +90,13 @@ consumer_secret =
 ##############################################################################
 
 [adhocracy_code]
-#repository = ssh://hg@bitbucket.org/liqd/adhocracy
-repository = https://bitbucket.org/liqd/adhocracy 
 branch =  default
+revision_nr = tip
 diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme
 
 [sources]
-adhocracy = hg ${adhocracy_code:repository} [branch=${adhocracy_code:branch}]
-adhocracy.enquete_theme = hg https://jokasis@bitbucket.org/liqd/adhocracy.enquete_theme 
+adhocracy = hg https://bitbucket.org/liqd/adhocracy [branch=${adhocracy_code:branch}]
+# adhocracy.enquete_theme = hg https://bitbucket.org/liqd/adhocracy.enquete_theme 
 adhocracy.wordpressbasic_theme = hg https://bitbucket.org/liqd/adhocracy.wordpressbasic_theme
 
 [ports]
@@ -128,11 +127,11 @@ recipe = gocept.recipe.env
 [grp]
 recipe = collective.recipe.grp
 
-[adhocracy_switch_branch]
+[adhocracy_switch_revision_number]
 recipe = plone.recipe.command
 stop-on-error = false
 command = 
-    [ -f src/adhocracy/setup.py ] && cd src/adhocracy && hg pull && hg update -C ${adhocracy_code:branch}
+    [ -f src/adhocracy/setup.py ] && cd src/adhocracy && hg pull && hg update -C ${adhocracy_code:revision_nr}
 
 [lxml]
 recipe = z3c.recipe.staticlxml
