--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -51,13 +51,12 @@ scripts = nosetests=nosetest
 debug = True
 
 [adhocracy_code]
-repository = ssh://hg@bitbucket.org/liqd/adhocracy
 branch = sprint-new-templates
 #diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.wordpressbasic_theme/adhocracy/wordpressbasic_theme
 diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme
 
 [sources]
-adhocracy = hg ${adhocracy_code:repository} [branch=${adhocracy_code:branch}]
+adhocracy = hg ssh://hg@bitbucket.org/liqd/adhocracy [branch=${adhocracy_code:branch}]
 adhocracy.enquete_theme = hg ssh://hg@bitbucket.org/liqd/adhocracy.enquete_theme
 adhocracy.wordpressbasic_theme = hg ssh://hg@bitbucket.org/liqd/adhocracy.wordpressbasic_theme
 
