--- a/versions.cfg
+++ b/versions.cfg
@@ -32,7 +32,7 @@ psycopg2 = 2.2.2
 python-memcached = 1.47
 python-openid = 2.2.5
 python-twitter = 0.8.2
-repoze.who = 2.0b1
+repoze.who = 2.0
 repoze.what.plugins.sql = 1.0rc4
 rod.recipe.rabbitmq = 2.0.0
 sqlalchemy-migrate = 0.7.1
