--- a/.hgignore
+++ b/.hgignore
@@ -18,3 +18,6 @@ etc/development.ini
 etc/rabbitmq-env.conf
 etc/vhost_adhocracy_bundestag.conf
 etc/vhost_adhocracy_bundestag_develop.conf
+etc/adhocracy.ini
+etc/unthemed.ini
+etc/vhost.conf
